<resources>
    <string name="app_name">Basic UI Controls Exercise 1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="meatballs_text">Meatballs</string>
    <string name="chicken_text">Chicken</string>
    <string name="fish_text">Fish</string>
    <string name="steak_text">Steak</string>
    <string name="carrots_text">Carrots</string>
    <string name="select_button_text">Select</string>
</resources>
